# voilib

./: .gitignore  compose.yml  pyrightconfig.json  readme.md
.github/: FUNDING.yml
.github/workflows/: backend.yml
backend/: .env.example  .gitignore  alembic.ini  dockerfile  makefile  pyproject.toml  readme.md  requirements.txt  setup.cfg
backend/migrations/: env.py
backend/migrations/versions/: 20e43bf62411_add_analytics_models.py  6baff69d05b2_add_folder_field_to_channel_model.py  9f05ae827591_hello_world.py
backend/src/voilib/: __init__.py  auth.py  db.py  embedding.py  main.py  settings.py  storage.py  tasks.py  transcription.py  utils.py  vector.py  worker.py
backend/src/voilib/cli/: __init__.py  checks.py  episodes.py  management.py
backend/src/voilib/collection/: __init__.py  crawler.py  feed.py  local.py  urls.json
backend/src/voilib/management/: utils.py  🏠-Home.py
backend/src/voilib/management/pages/: 1_🔑-Login.py  2_📈-Stats.py  3_🔈-Media.py  4_⚙️-Tasks.py
backend/src/voilib/models/: __init__.py  analytics.py  base.py  media.py  users.py
backend/src/voilib/routers/: __init__.py  analytics.py  app.py  media.py  users.py
backend/src/voilib/schemas/: __init__.py  analytics.py  media.py  users.py
backend/src/voilib/tests/: __init__.py  conftest.py  test_analytics.py  test_app.py  test_collection.py  test_media.py  test_storage.py  test_transcription.py  test_users.py  test_vector.py
backend/src/voilib/tests/data/: golf.csv  jobs.csv
frontend/: .gitignore  README.md  dockerfile.dev  dockerfile.prod  index.html  makefile  nginx.conf  package-lock.json  package.json  readme.md  tailwind.config.cjs  vite.config.js
frontend/src/: App.svelte  api.js  routes.js  stores.js
frontend/src/lib/: AppLogo.svelte  CardQueryResult.svelte  DemoQueries.svelte  Hero.svelte  PageFooter.svelte  PageHeader.svelte  Player.svelte  StretchSpinner.svelte  WaveSpinner.svelte  (+1 more)
infra/: makefile  readme.md
infra/development/: .env.dev.example  compose.yml  traefik.dev.toml
infra/production/: .env.prod.example  compose.yml  traefik.prod.toml
(+5 files in other folders)
