# Copyright (c) 2022-2023 Pablo González Carrizo (unmonoqueteclea)
# All rights reserved.

[metadata]
name = voilib
version = 2.0.1
url = https://gitlab.com/unmonoqueteclea/voilib/
author = Pablo González Carrizo (unmonoqueteclea)
author_email = pgonzalezcarrizo@gmail.com
description = voilib
long_description = file: readme.md

[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.9, <4
install_requires =
    fastapi[all]>=0.85.1,<1
    fastapi-pagination>=0.10.0,<1
    xmltodict>=0.13.0,<1
    ormar>=0.12.0,<0.13.0
    alembic>=1.8.1,<2
    aiosqlite>=0.19.0
    python-jose[cryptography]>=3.3.0,<4
    passlib[bcrypt]>=1.7.4,<2
    rq>=1.13.0,<2
    jax[cpu]>=0.4.8,<1
    whisper-jax @ git+https://github.com/sanchit-gandhi/whisper-jax.git@0d3bc54
    python-dateutil>=2.8.2,<3
    sentence-transformers>=2.2.2,<3
    qdrant-client>=1.1.6,<2

[options.packages.find]
where=src

[options.package_data]
* = urls.json

[options.entry_points]
console_scripts =
    voilib-checks = voilib.cli.checks:main
    voilib-episodes = voilib.cli.episodes:main

[options.extras_require]
dev =
    ruff
    black
    pytest
    pytest-aio # plugin to run async test functions/fixtures.
    pytest-env # plugin that enables you to set environment variables for pytest